tests/spec/format/snapshots/interface_with_parent.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface Reader {
    embed Closable;
    fn read() -> string;
  }
---
interface Reader {
  embed Closable
  fn read() -> string
}
