tests/spec/format/snapshots/lambda_as_last_arg.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { map(items, |x| x + 1) }"
---
fn test() {
  map(items, |x| x + 1)
}
