tests/spec/format/snapshots/lambda_block_arg_hugs_call_parens.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { foo(|x| { x + 1 }) }"
---
fn test() {
  foo(|x| {
    x + 1
  })
}
