tests/spec/format/snapshots/lambda_block_arg_hugs_call_parens_after_leading_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { foo(a, b, |x| { x + 1 }) }"
---
fn test() {
  foo(a, b, |x| {
    x + 1
  })
}
