tests/spec/format/snapshots/lambda_block_arg_keeps_params_intact_in_overlong_call.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn main() {
    let handler = some_quite_long_method_name_which_causes_weird_formatting(|a_rather_long_parameter_name| { a_rather_long_parameter_name + 1 })
  }
---
fn main() {
  let handler = some_quite_long_method_name_which_causes_weird_formatting(
    |a_rather_long_parameter_name| {
      a_rather_long_parameter_name + 1
    },
  )
}
