tests/spec/format/snapshots/lambda_match_body_arg_hugs_call_parens.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { items.map(|x| match x { Some(v) => v, None => 0 }) }"
---
fn test() {
  items.map(|x| match x {
    Some(v) => v,
    None => 0,
  })
}
