tests/spec/format/snapshots/lambda_multi_param.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = |a, b, c| a + b + c; }"
---
fn test() {
  let f = |a, b, c| a + b + c
}
