tests/spec/format/snapshots/lambda_nested.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let f = |x| |y| x + y; }"
---
fn test() {
  let f = |x| |y| x + y
}
